--- a/style/acad.scss
+++ b/style/acad.scss
@@ -4,28 +4,68 @@ body{
     height: 100vh;
 
     .nav-menu{
-      background: red;
       height: 100vh;
       width: 220px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+      .menu-header{
+       
+        .menu-title{
+          background: var(--gradient-menu);
+          width: 100%;
+          height: 68px;
+          color: var(--white);
+        }
+      }
+      .menu-itens{
+        width: 100%;
+        height: auto;
+          li{
+            width: 100%;
+            height: 33px;
+            border-bottom: 2px solid var(--gray-50);
+            background: var(--gradient-link);
+            cursor: pointer;
+            a{
+              width: auto;
+              height: 100%;
+              background: var(--white);
+              
+              display: flex;
+              align-items: center;
+
+              transition: 0.5s;
+
+              span{
+                color: var(--orange-gray);
+                margin-left: 24px;
+              }
+            }
+            .active{
+              background: var(--orange-50);
+              margin-left: 5px;
+            }
+          }
+      }
     }
+    
+
     .container{
       width: 100%;
       height: auto;
       overflow-x: hidden;
-
       .container-main{
        
         .container-header{
           height: 68px;
-          .header-title{
+          .container-title{
             background: pink;
             flex-grow: 4;
           }
-          .header-language{
+          .container-language{
             background: yellow;
             flex-grow: 1;
           }
-          .header-autor{
+          .container-autor{
             background: blue;
             flex-grow: 2;
           }
@@ -69,3 +109,13 @@ body{
     }
   }
 }
+
+main [target] {
+  display: none;
+}
+
+main div:target{
+  display: block;
+}
+
+
