--- a/style/acad.scss
+++ b/style/acad.scss
@@ -3,95 +3,83 @@ body{
   main{
     width: 100vw;
     height: 100vh;
+    position: relative;
 
-  position: relative;
+    .menu{
+      position: relative;
 
-    #show-menu{
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      
-      position: absolute;
-      left: 220px;
-      transition: left 0.5s;
- 
-      span{
-        background-color: var(--orange-100);
-        border-radius: 0 50% 50% 0;
-        width: 25px;
-        height: 40px;
-        padding: 8px;
-      
-        #icon-menu{
-          background-image: url(/assets/arrow.svg);
-          background-repeat: no-repeat;
-          background-size: contain;
-          background-position: center;
+      .nav-menu{
+        height: 100vh;
+        min-width: 220px;
+        width: 0px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+        z-index: 1000;
+        background: white;
+  
+        transition: min-width 0.5s;
+        
+        .menu-header{
           width: 100%;
-          height: 100%;
-        }
-      }
-    }
-    .nav-menu{
-      height: 100vh;
-      min-width: 220px;
-      width: 0px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-      z-index: 1000;
 
-      transition: min-width 0.5s;
-      
-      .menu-header{
-        width: 100%;
-        .menu-title{
-          background: var(--gradient-menu);
-          width: 100%;
-          height: 68px;
-          color: var(--white);
-          text-transform: uppercase;
+          .menu-title{
+            background: var(--gradient-menu);
+            width: 100%;
+            height: 68px;
+            color: var(--white);
+            text-transform: uppercase;
+            overflow: hidden;
+            overflow-wrap: break-word;
+            
+          }
+          img{
+            background-size: auto;
+            width: 100%;
+          }
           
         }
-        img{
-          background-size: auto;
-          width: 100%;
-        }
         
-      }
-      
-      .menu-itens{
-        width: 100%;
-        height: auto;
-          li{
-            width: 100%;
-            height: 33px;
-            border-bottom: 2px solid var(--gray-50);
-            background: var(--gradient-link);
-            cursor: pointer;
-            a{
-              width: auto;
-              height: 100%;
-              background: var(--white);
-              
-              display: flex;
-              align-items: center;
-
-              transition: 0.5s;
-
-              span{
-                color: var(--orange-gray);
-                margin-left: 24px;
-                font-family: 'Quicksand', sans-serif;
-                font-weight: 500;
+        .menu-itens{
+          width: 100%;
+          height: auto;
+          overflow: hidden;
+          overflow-wrap: break-word;
+          
+            li{
+              width: 100%;
+              height: 33px;
+              border-bottom: 2px solid var(--gray-50);
+              background: var(--gradient-link);
+              cursor: pointer;
+              a{
+                width: auto;
+                height: 100%;
+                background: var(--white);
+                
+                display: flex;
+                align-items: center;
+  
+                transition: 0.5s;
+  
+                span{
+                  color: var(--orange-gray);
+                  margin-left: 24px;
+                  font-family: 'Quicksand', sans-serif;
+                  font-weight: 500;
+                }
+              }
+              .active{
+                background: var(--orange-50);
+                margin-left: 5px;
               }
             }
-            .active{
-              background: var(--orange-50);
-              margin-left: 5px;
-            }
-          }
+        }
+      }
+
+      #show-menu{
+        display: none;
       }
     }
+   
     
 
     .container{
@@ -137,16 +125,29 @@ body{
             }
           }
           .container-language{
-            button{
-              box-sizing: border-box;
-              width: 97px;
-              height: 34px;
-              border: 1px solid #CCCCCC;
-              border-radius: 3px;
+            width: 97px;
+            height: 34px;
+            border: 1px solid #CCCCCC;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            select{
+              width: 80px;
               background: transparent;
               text-transform: uppercase;
-              color: var(--black-500);
+              background-image: url(/assets/language.svg);
+              background-repeat: no-repeat;
+              background-size: 15px;
+              background-position: left;
+              padding-left: 15px;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 18px;
+              font-family: 'Quicksand', sans-serif;
             }
+          
+           
           }
           .container-autor{
             margin-left: 22px;
@@ -246,8 +247,16 @@ body{
                     padding: 6px 12px;
                     background: var(--orange-100);
                     margin-left: 5px;
-
+                    transition: box-shadow 0.25s ease, transform .25s ease, -webkit-transform .25s ease;
+                    
+                    &:hover{
+                      transform: translate3d(0, -3px, 0);
+                      box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
+                      background: var(--gradient-button);
+                    }
                   }
+                  
+
                   i{
                     text-transform: capitalize;
                     font-style: normal;
@@ -433,6 +442,12 @@ body{
                 padding: 7px 14px;
                 box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
                 border-radius: 4px;
+                transition: box-shadow 0.25s ease, transform .25s ease, -webkit-transform .25s ease;
+
+                &:hover{
+                  transform: translate3d(0, -3px, 0);
+                  background: var(--gradient-menu);
+                } 
 
                 span{
                   margin-left: 6px;
@@ -511,40 +526,19 @@ body{
                 box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
                 border-radius: 2px;
                 padding: 3px 6px;
-                
+                &:hover{
+                  background: var(--gradient-menu);
+                }
                }
 
              }
             }
            
           }
-
-          //estilos repetidos
-
-          .card{
-            border-radius: 3px;
-            border: 1px solid var(--gray-border);
-
-            .header-top{
-              background: var(--orange-50);
-              padding: 10px 15px;
-              border-bottom: 1px solid var(--gray-border);
-              h5{
-                font-weight: 500;
-                line-height: 25px;
-                color: var(--gray-800);
-              }
-            }
-            .margin-main{
-              margin: 15px;
-
-            }
-          }
-
-          
         }
       }
 
+//footer
       .container-footer{
         margin: 50px 74px 50px 14px;
         
@@ -590,13 +584,16 @@ body{
               width: 200px;
               height: 30px;
               border-radius: 6px;
-              i{
+           
+              a{
                 font-weight: 100;
                 font-family: 'Quicksand';
                 color: var(--white);
 
                
               }
+
+              
               
             }
           }
@@ -656,6 +653,33 @@ body{
   }
 }
 
+//estilos refetidos
+
+.card{
+  border-radius: 3px;
+  border: 1px solid var(--gray-border);
+
+  .header-top{
+    background: var(--orange-50);
+    padding: 10px 15px;
+    border-bottom: 1px solid var(--gray-border);
+    h5{
+      font-weight: 500;
+      line-height: 25px;
+      color: var(--gray-800);
+    }
+  }
+  .margin-main{
+    margin: 15px;
+
+  }
+}
+
+button{
+  cursor: pointer;
+}
+
+//navegação
 main [target] {
   display: none;
 }
@@ -675,57 +699,57 @@ main div:target{
   }
 }
 
-
 @media (max-width: 1024px) {
 
   body main {
     
-    .nav-menu{
-      transition: min-width 0.5s;
-      width: 0px;
-      min-width: 0px;
-      .menu-title{
-        h2{
-          display: none;
-        }
+    .menu{
+      position: absolute;
+
+      .nav-menu{
+        transition: min-width 0.5s;
+        transition: width 0.5s;
+        width: 0px;
+        min-width: 0px;
       }
-      img{
-        display: none;
+  
+      .hide{
+          transition: width 0.5s;
+          width: 220px;
       }
-      .menu-itens{
-        display: none;
-      }
-    }
-    #show-menu{
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       
-      transition: left 0.5s;
-      position: fixed;
-      left: 0px;
- 
-      span{
-        background-color: var(--orange-100);
-        border-radius: 0 50% 50% 0;
-        width: 25px;
-        height: 40px;
-        padding: 8px;
-      
-        #icon-menu{
-          background-image: url(/assets/arrow.svg);
-          background-repeat: no-repeat;
-          background-size: contain;
-          background-position: center;
-          transition: transform 1s;
-          transform: rotateZ(180deg);
-          width: 100%;
-          height: 100%;
+      #show-menu{
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(90deg, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0) 100%);
+   
+        span{
+          background-color: var(--orange-100);
+          border-radius: 0 50% 50% 0;
+          width: 25px;
+          height: 40px;
+          padding: 8px;
+        
+          .hide-icon{
+            transform: rotateZ(180deg);
+          }
+     
+          #icon-menu{
+            transition: transform 1s;
+            width: 100%;
+            height: 100%;
+          }
         }
       }
     }
+    
   }
+  
+}
+
+@media(max-width: 769px) {
   
 }
 
