--- a/style/acad.css
+++ b/style/acad.css
@@ -217,11 +217,11 @@ body main .container .container-main .container-header .container-autor .autor-i
   line-height: 1.5rem;
 }
 
-body main .container .container-main .container-header .container-autor div {
+body main .container .container-main .container-header .container-autor .autor-user {
   position: relative;
 }
 
-body main .container .container-main .container-header .container-autor div div {
+body main .container .container-main .container-header .container-autor .autor-user div {
   padding: 0.7rem;
   position: absolute;
   background: var(--danger);
@@ -242,12 +242,12 @@ body main .container .container-main .container-header .container-autor div div 
           align-items: center;
 }
 
-body main .container .container-main .container-header .container-autor div div i {
+body main .container .container-main .container-header .container-autor .autor-user div i {
   font-size: 1rem;
   font-weight: bold;
 }
 
-body main .container .container-main .container-header .container-autor div img {
+body main .container .container-main .container-header .container-autor .autor-user img {
   width: 3.0rem;
   height: 3.0rem;
   border-radius: 100%;
@@ -469,18 +469,6 @@ body main .container .container-main .margin .container-line .talk-add {
   margin: 0 auto;
 }
 
-body main .container .container-main .margin .container-line .talk-add h6 {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1.8rem;
-  line-height: 2.1rem;
-  color: var(--orange-100);
-  margin-bottom: 2.7rem;
-  letter-spacing: 0.1rem;
-  text-align: center;
-}
-
 body main .container .container-main .margin .container-line .talk-add .icons {
   margin-bottom: 3.5rem;
 }
@@ -498,6 +486,10 @@ body main .container .container-main .margin .container-line .talk-add p {
   color: #595959;
 }
 
+body main .container .container-main .margin .container-line .talk-add h6 {
+  margin-bottom: 2.7rem;
+}
+
 body main .container .container-main .margin .container-line .talk-button {
   margin: 3.1rem 0;
   position: relative;
@@ -510,11 +502,6 @@ body main .container .container-main .margin .container-line .talk-button {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-body main .container .container-main .margin .container-line .talk-button hr {
-  border-top: 0.1rem solid #E7E7E7;
-  width: 100%;
 }
 
 body main .container .container-main .margin .container-line .talk-button button {
@@ -548,15 +535,111 @@ body main .container .container-main .margin .container-line .talk-button button
   text-align: center;
 }
 
-body main .container .container-main .margin .container-line .talk-comment {
-  border: 0.1rem solid var(--gray-50);
-  -webkit-box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
-  border-radius: 0.4rem;
-  padding: 1.7rem 2.3rem;
+body main .container .container-main .margin .container-line .talk-button::after {
+  border-top: 0.1rem solid var(--gray-50);
+  width: 100%;
+  height: 1;
+  content: ' ';
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  height: 0.1rem;
 }
 
-body main .container .container-main .margin .container-line .talk-comment i {
+body main .container .container-main .margin .container-line .talk-edit p {
+  text-align: center;
+  margin-bottom: 2.2rem;
+  margin-top: 1.0rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit .edit-title {
+  margin-bottom: 1rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit .edit-title input {
+  background: var(--white);
+  border: 1px solid var(--white-100);
+  border-radius: 0.3rem;
+  height: 4rem;
+  margin-top: 0.4rem;
+  font-size: 1.4rem;
+  padding: 1rem 2.4rem;
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.8rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit div .box-edit {
+  background: var(--white);
+  border: 1px solid var(--white-100);
+  border-radius: 0.3rem;
+  margin-top: 0.4rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit div .box-edit textarea {
+  height: 8.2rem;
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 1rem 2.4rem;
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.8rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit div .box-edit .edit-button {
+  background: var(--white-50);
+  border-top: 1px solid var(--white-100);
+  border-radius: 0px 0px 0.4rem 0.4rem;
+  height: 3.1rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit div .box-edit .edit-button img {
+  margin-left: 3rem;
+  cursor: pointer;
+  width: 1.2rem;
+}
+
+body main .container .container-main .margin .container-line .talk-edit div .box-edit .edit-button button {
+  background: var(--gradient-edit);
+  border-radius: 0px 0px 0.1rem 0px;
+  width: 20.5rem;
+  color: var(--white);
+  height: 100%;
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1.6rem;
+  text-align: center;
+}
+
+body main .container .container-main .margin .container-line .talk-edit::after {
+  border-top: 0.1rem solid var(--gray-50);
+  width: 100%;
+  height: 1;
+  content: ' ';
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  height: 0.1rem;
+  margin-bottom: 3rem;
+  margin-top: 1.5rem;
+}
+
+body main .container .container-main .margin .container-line .talk-confirm h6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.8rem;
+  text-align: center;
+}
+
+body main .container .container-main .margin .container-line .talk-confirm p {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+body main .container .container-main .margin .container-line i {
   font-family: 'Quicksand';
   font-style: normal;
   font-weight: 700;
@@ -565,39 +648,78 @@ body main .container .container-main .margin .container-line .talk-comment i {
   color: var(--orange-100);
 }
 
-body main .container .container-main .margin .container-line .talk-comment a {
-  font-family: 'Quicksand';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
-  color: var(--gray-600);
-  margin-top: 0.3rem;
-}
-
-body main .container .container-main .margin .container-line .talk-comment p {
+body main .container .container-main .margin .container-line p {
   font-family: 'Quicksand';
   font-style: normal;
   font-weight: 400;
   line-height: 1.8rem;
-  margin-top: 1.0rem;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
   color: var(--gray-900);
+  word-break: normal;
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons {
+body main .container .container-main .margin .container-line h6 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.1rem;
+  color: var(--orange-100);
+  letter-spacing: 0.1rem;
+  text-align: center;
+}
+
+body main .container .container-main .margin .container-line a {
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 500;
+  line-height: 137.5%;
+  text-align: center;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: var(--orange-500);
+}
+
+body main .container .container-main .margin .container-line a:hover {
+  color: var(--orange-100);
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card {
+  position: relative;
+  border: 0.1rem solid var(--gray-50);
+  -webkit-box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
+  border-radius: 0.4rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card a {
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5rem;
+  color: var(--gray-600);
+  text-align: left;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment {
+  padding: 1.7rem 2.3rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment a {
+  margin-bottom: 1rem;
+  margin-top: 0.3rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons {
   margin-top: 1.1rem;
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons div {
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons div {
   margin-right: 1.5rem;
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons div a {
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons div a {
   font-style: normal;
   font-weight: 350;
   font-size: 1.4rem;
@@ -605,27 +727,82 @@ body main .container .container-main .margin .container-line .talk-comment .comm
   color: var(--gray-500);
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons div img {
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons div img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 0.4rem;
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons button {
-  background: #ED7839;
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons button {
+  background: var(--orange-100);
   -webkit-box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
           box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
   border-radius: 0.2rem;
   padding: 0.3rem 0.6rem;
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons button:hover {
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons button:hover {
   background: var(--gradient-menu);
 }
 
-body main .container .container-main .margin .container-line .talk-comment .comment-buttons button img {
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-comment .comment-buttons button img {
   width: 1.2rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .comment-answer {
+  border-top: 0.1rem solid var(--gray-50);
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .comment-answer p {
+  margin-right: 4rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .answer-autor {
+  background: #F8F8F8;
+  padding: 1.8rem 2.4rem 3.5rem 2.4rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .answer-autor .answer-head {
+  margin-bottom: 1rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .answer-autor .answer-head p {
+  color: var(--orange-100);
+  font-weight: 700;
+  margin-right: 1.3rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .answer-autor .answer-head img {
+  margin-right: 0.5rem;
+  width: 2.1rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .answer-user {
+  padding: 1.8rem 2.4rem;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-opacity {
+  padding: 3.5rem;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #f3f2f2a1;
+  -webkit-backdrop-filter: blur(0.3rem);
+          backdrop-filter: blur(0.3rem);
+  border: 1px solid var(--gray-50);
+  border-radius: 4px;
+  text-align: center;
+  display: none;
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-opacity svg path {
+  fill: var(--gray-550);
+}
+
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-opacity i {
+  margin: 0.8rem 0;
+  color: var(--gray-550);
 }
 
 body main .container .container-footer {
@@ -633,7 +810,7 @@ body main .container .container-footer {
 }
 
 body main .container .container-footer hr {
-  border-top: 0.1rem solid #E7E7E7;
+  border-top: 0.1rem solid var(--gray-50);
   width: 100%;
 }
 
@@ -891,7 +1068,24 @@ main div:target {
 
 @media (max-width: 481px) {
   html {
-    font: 29.5% Roboto, sans-serif;
+    font: 25.5% Roboto, sans-serif;
+  }
+  html .teste {
+    position: relative;
+  }
+  html .teste .container-autor {
+    position: inherit;
+  }
+  html .teste .container-autor .autor-infor {
+    background: var(--orange-50);
+    border-radius: 5px;
+    position: absolute;
+    right: 0;
+    top: 3.5rem;
+    padding: 8px;
+    color: white;
+    -webkit-box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
+            box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
   }
 }
 /*# sourceMappingURL=acad.css.map */
