--- a/style/acad.scss
+++ b/style/acad.scss
@@ -211,8 +211,7 @@ body{
                 line-height: 1.5rem;
               }
             }
-            div{
-              
+            .autor-user{
               position: relative;
               div{
                 padding: 0.7rem;
@@ -459,17 +458,7 @@ body{
             .talk-add{
               max-width: 62.6rem;
               margin: 0 auto;
-              h6{
-                font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 1.8rem;
-                line-height: 2.1rem;
-                color: var(--orange-100);
-                margin-bottom: 2.7rem;
-                letter-spacing: 0.1rem;
-                text-align: center;
-              }
+             
               .icons{
                 margin-bottom: 3.5rem;
 
@@ -486,8 +475,9 @@ body{
                 
                 color: #595959;
               }
-              
-              
+              h6{
+                margin-bottom: 2.7rem;
+              }
             }
 
             .talk-button{
@@ -497,10 +487,7 @@ body{
               display: flex;
               align-items: center;
               justify-content: center;
-              hr{
-                border-top: 0.1rem solid #E7E7E7;
-                width: 100%;
-              }
+             
               button{
                 position: absolute;
                 top: -1.5rem;
@@ -530,84 +517,281 @@ body{
                
               }
               
+              &::after{
+                border-top: 0.1rem solid var(--gray-50);
+                width: 100%;
+                height: 1;
+                content: ' ';
+                flex: 1 1;
+                height: 0.1rem;
+              }
 
             }
-            .talk-comment{
-              border: 0.1rem solid var(--gray-50);
-              box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
-              border-radius: 0.4rem;
-              padding: 1.7rem 2.3rem;
-              i{
-                font-family: 'Quicksand';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 1.6rem;
-                line-height: 2.0rem;
-                color: var(--orange-100);
+
+            .talk-edit{
+              p{
+                text-align: center;
+                margin-bottom: 2.2rem;
+                margin-top: 1.0rem;
               }
-              a{
-                font-family: 'Quicksand';
-                font-style: normal;
-                font-weight: 500;
-                font-size: 1.2rem;
-                line-height: 1.5rem;
-                color: var(--gray-600);
-                margin-top: 0.3rem;
+             
+              .edit-title{
+                margin-bottom: 1rem;
+                input{
+                  
+                  background:var(--white) ;
+                  border: 1px solid var(--white-100);
+                  border-radius: 0.3rem;
+                  height: 4rem;
+
+                  margin-top: 0.4rem;
+
+                  font-size: 1.4rem;
+                  padding: 1rem 2.4rem;
+                  font-family: 'Quicksand';
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: 1.8rem;
+
+                }
+              }
+              
+              div {
+                .box-edit{
+                  background:var(--white) ;
+                  border: 1px solid var(--white-100);
+                  border-radius: 0.3rem;
+                  margin-top: 0.4rem;
+
+                  textarea{
+                    height: 8.2rem;
+                    width: 100%;
+
+                    font-size: 1.4rem;
+                    padding: 1rem 2.4rem;
+                    font-family: 'Quicksand';
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.8rem;
+
+                  }
+                  .edit-button{
+                    background:var(--white-50);
+                    border-top: 1px solid var(--white-100);
+                    border-radius: 0px 0px 0.4rem 0.4rem;
+                    height: 3.1rem;
+                    
+                    img{
+                      margin-left: 3rem;
+                      cursor: pointer;
+                      width: 1.2rem;
+                    }
+
+                    button{
+                      background: var(--gradient-edit);
+                      border-radius: 0px 0px 0.1rem 0px;
+                      width: 20.5rem;
+                      color: var(--white);
+                      height: 100%;
+                      font-family: 'Quicksand';
+                      font-style: normal;
+                      font-weight: 700;
+                      font-size: 1.5rem;
+                      line-height: 1.6rem;
+                      text-align: center;
+                    }
+                  }
+                }
+              }
+              &::after{
+                border-top: 0.1rem solid var(--gray-50);
+                width: 100%;
+                height: 1;
+                content: ' ';
+                flex: 1 1;
+                height: 0.1rem;
+                margin-bottom: 3rem;
+                margin-top: 1.5rem;
+              }
+            }
+         
+            .talk-confirm{
+              h6{
+                margin-top: 1.5rem;
+                margin-bottom: 1.8rem;
+                text-align: center;
               }
               p{
-                font-family: 'Quicksand';
-                font-style: normal;
-                font-weight: 400;
-                line-height: 1.8rem;
-                margin-top: 1.0rem;
-
-                -webkit-line-clamp: 2;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;   
-
-                color: var(--gray-900);
+                text-align: center;
+                margin-bottom: 3rem;
               }
-             .comment-buttons{
-               margin-top: 1.1rem;
-               
-               div{
-                margin-right: 1.5rem;
+            }
+          //repetidos
+            i{
+              font-family: 'Quicksand';
+              font-style: normal;
+              font-weight: 700;
+              font-size: 1.6rem;
+              line-height: 2.0rem;
+              color: var(--orange-100);
+            }
+            p{
+              font-family: 'Quicksand';
+              font-style: normal;
+              font-weight: 400;
+              line-height: 1.8rem;
+              color: var(--gray-900);
+              word-break: normal;
+            }
+            h6{
+              font-family: 'Roboto';
+              font-style: normal;
+              font-weight: 700;
+              font-size: 1.8rem;
+              line-height: 2.1rem;
+              color: var(--orange-100);
+              
+              letter-spacing: 0.1rem;
+              text-align: center;
+            }
+
+            a{
+              font-family: 'Quicksand';
+              font-style: normal;
+              font-weight: 500;
+              line-height: 137.5%;
+              text-align: center;
+              text-decoration-line: underline;
+              color: var(--orange-500);
+              &:hover{
+                color: var(--orange-100);
+              }
+            }
+
+            .talk-comments{
+              .talk-card{
+                position: relative;
+                border: 0.1rem solid var(--gray-50);
+                box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
+                border-radius: 0.4rem;
 
                 a{
+                  font-family: 'Quicksand';
                   font-style: normal;
-                  font-weight: 350;
-                  font-size: 1.4rem;
-                  line-height: 1.9rem;
+                  font-weight: 700;
+                  line-height: 1.5rem;
+                  color: var(--gray-600);
+                  text-align: left;
+                  text-decoration-line: none;
+                }
                 
-                  color: var(--gray-500);
-                }
-                img{
-                  display: flex;
-                  width: 0.4rem;
+
+                .talk-comment{
                  
+                  padding: 1.7rem 2.3rem;
+                  
+                  a{
+                    margin-bottom: 1rem;
+                  margin-top: 0.3rem;
+
+                  }
+                 .comment-buttons{
+                   margin-top: 1.1rem;
+                   
+                   div{
+                    margin-right: 1.5rem;
+    
+                    a{
+                      font-style: normal;
+                      font-weight: 350;
+                      font-size: 1.4rem;
+                      line-height: 1.9rem;
+                    
+                      color: var(--gray-500);
+                    }
+                    img{
+                      display: flex;
+                      width: 0.4rem;
+                     
+                    }
+                   }
+                  
+    
+                   button{
+                    background: var(--orange-100);
+                    box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
+                    border-radius: 0.2rem;
+                    padding: 0.3rem 0.6rem;
+
+                    &:hover{
+                      background: var(--gradient-menu);
+                    }
+    
+                    img{
+                      width: 1.2rem;
+                    }
+                   }
+    
+                 }
                 }
-               }
+
+                .comment-answer{
+                  border-top: 0.1rem solid var(--gray-50);
+                  p{
+                   margin-right: 4rem;
+                  }
+                 
+                 }
+                 .answer-autor{
+                  background: #F8F8F8;
+                  padding: 1.8rem 2.4rem 3.5rem 2.4rem;
+                  .answer-head{
+                    margin-bottom: 1rem;
+                    
+                    p{
+                      color: var(--orange-100);
+                      font-weight: 700;
+                      margin-right: 1.3rem;
+                      
+                    }
+                    img{
+                      margin-right:0.5rem;
+                      width: 2.1rem;
+                    }
+                  }
+                  
+                 }
+                 .answer-user{
+                  padding: 1.8rem 2.4rem;
+                }
+
+                 
+
+                .talk-opacity{
+                  padding: 3.5rem;
+                  position: absolute;
+                  width: 100%;
+                  height: 100%;
+                  background: #f3f2f2a1;
+                  backdrop-filter: blur(0.3rem);
+                  border: 1px solid var(--gray-50);
+                  border-radius: 4px;
+                  text-align: center;
+                  display: none;
+                  svg{
+                    path{
+                      fill: var(--gray-550);
+                    }
+                    
+                  }
+                  i{
+                    margin: 0.8rem 0;
+                    color: var(--gray-550);
+                  }
+                }
+              }
               
-
-               button{
-                background: #ED7839;
-                box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
-                border-radius: 0.2rem;
-                padding: 0.3rem 0.6rem;
-                &:hover{
-                  background: var(--gradient-menu);
-                }
-
-                img{
-                  width: 1.2rem;
-                }
-               }
-
-             }
             }
-           
           }
         }
       }
@@ -618,7 +802,7 @@ body{
         
        
         hr{
-          border-top: 0.1rem solid #E7E7E7;
+          border-top: 0.1rem solid var(--gray-50);
           width: 100%;
         }
         .padding-footer{
@@ -862,10 +1046,37 @@ main div:target{
 
 @media(max-width:481px){
   html{
-    font: 29.5% Roboto, sans-serif;
+    font: 25.5% Roboto, sans-serif;
+
+    .teste{
+      position: relative;
+
+      .container-autor{
+       position: inherit;
+        .autor-infor{
+          background: var(--orange-50);
+          border-radius: 5px;
+          position: absolute;
+          right: 0;
+          top: 3.5rem;
+          padding: 8px;
+          color: white;
+          box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
+
+      
+        }  
+  
+      }
+     
+    }
+
+    
   }
 }
 
+@media(max-width:320px){
+
+}
 // 320px — 480px: dispositivos móveis
 // 481px — 768px: iPads, tablets
 // 769px — 1024px: telas pequenas, laptops
